# brokegen

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
python/: ingest.mk  ingest_cli.py  merge_db.py  pyproject.toml
python/_apps/: __init__.py  rag-proxy.mk  rag_proxy.py  rag_proxy_helper.py  server.mk  server.py  simple_proxy.py  targets.mk  test_simple_proxy.py
python/_util/: __init__.py  json.py  json_streaming.py  status.py  test_json_streaming.py  typing.py
python/access/: ratelimits.py
python/audit/: content_scrubber.py  http.py  http_raw.py
python/client/: __init__.py  add_message.py  add_sequence.py  chat_message.py  chat_sequence.py  database.py  message.py  message_add.py  sequence.py  sequence_add.py  sequence_events.py  sequence_get.py  test_routes.py
python/client_ollama/: __init__.py  emulate.py  emulate_api_chat.py  forward.py
python/history/: DESIGN.md  __init__.py  base_models.py  big_proxy.py  database.py  ollama_models.py  ollama_routes.py  routes_ollama.py  server.py  targets.mk
python/history/chat/: __init__.py  add_message.py  add_sequence.py  database.py  routes.py  routes_generate.py  routes_message.py  routes_model.py  routes_sequence.py  sequence_events.py  sequence_extend.py  sequence_get.py  test_routes.py
python/history/ollama/: __init__.py  chat.py  chat_rag_routes.py  chat_rag_util.py  chat_routes.py  direct_routes.py  executor.py  forward_routes.py  forwarding.py  forwarding_routes.py  json.py  model_routes.py  models.py  simple_proxy.py  test_models.py  test_simple_proxy.py
python/history/prompting/: __init__.py  test_llama3.py
python/history/shared/: DESIGN.md  database.py  json.py  models_reference.py  routes.py
python/inference/: __init__.py  autonaming.py  autonaming_routes.py  continuation.py  continuation_routes.py  iterators.py  logging.py  ollama_proxy_app.py  rag_proxy_app.py  routes.py  routes_langchain.py  targets.mk  test_iterators.py  test_ollama_proxy_app.py
python/inference/_apps/: ollama_proxy.py  rag_proxy.py  test_ollama_proxy.py
python/inference/autonaming/: __init__.py  bridge.py  routes.py
python/inference/dspy/: database.py
python/inference/embeddings/: knowledge.py  retrieval.py  vectorestore.py
python/inference/prompting/: models.py  superprompting.py  templating.py  test_llama3.py  test_model.py
python/ingest/: __init__.py  filesystem.py  ingest_cli.py  knowledge.py  targets.mk
python/providers/: __init__.py  _util.py  database.py  echo.py  orm.py  registry.py  routes.py
python/providers/foundation_models/: __init__.py  orm.py  routes.py
python/providers/inference_models/: __init__.py  database.py  orm.py  routes.py  test_model.py
python/providers/llamafile/: __init__.py
python/providers/ollama/: __init__.py
python/providers/openai/: __init__.py  lm_studio.py
python/providers_llamafile/: direct_routes.py  registry.py
python/providers_ollama/: __init__.py  chat_rag_util.py  chat_routes.py  direct_routes.py  forwarding.py  forwarding_routes.py  json.py  model_routes.py  models.py  registry.py  sequence_extend.py
python/providers_ollama/api_chat/: __init__.py  converter.py  inject_rag.py  intercept.py
python/providers_registry/: __init__.py  _util.py  echo.py  providers_cli.py
python/providers_registry/echo/: logging.py  registry.py
python/providers_registry/lcp/: __init__.py  factory.py  provider.py
python/providers_registry/llamafile/: __init__.py  direct_routes.py  registry.py
python/providers_registry/ollama/: __init__.py  chat_routes.py  (+12 more)
python/retrieval/: database.py  filesystem.py  ingest_cli.py  targets.mk
(+177 files in other folders)
