[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = 'brokegen'
version = '0.1'
license = {text = '0BSD'}
dependencies = [
    'fastapi',
    'httpx[http2]',
    'hypercorn',
    'importlib-metadata; python_version>="3.12"'
]

[project.optional-dependencies]
testing = [
    'pytest',
]

[tool.setuptools]
packages = ['brokegen']
