[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = 'brokegen'
version = '0.2'
license = {text = '0BSD'}

# Virtually all dependencies are optional, because of how disparate our build targets are.
# More specifically, pyinstaller gets a bit complex, so give each build target its own dependencies + venv.
dependencies = [
    'click',
    'pyinstaller',
    'importlib-metadata; python_version>="3.11"',
]

[project.optional-dependencies]
inference = [
    'fastapi',
    'httpx[http2]',
    'sqlalchemy',
    'uvicorn',
    # "Optional" dependencies
    'colorlog',
]
ingest = [
    'pypandoc',
]
testing = [
    'pytest',
]

[tool.setuptools]
packages = [
    'inference',
    'ingest',
]
