[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = 'brokegen'
version = '0.8'
license = {text = '0BSD'}

# Virtually all dependencies are optional, because of how disparate our build targets are.
# More specifically, pyinstaller gets a bit complex, so give each build target its own dependencies + venv.
dependencies = [
    'click',
    'pyinstaller',
    'importlib-metadata; python_version>="3.11"',
]

[project.optional-dependencies]
inference = [
    'faiss-cpu',
    'fastapi',
    'httpx[http2]==0.27.0',
    'langchain',
    'langchain_experimental',
    'orjson',
    'simsimd==3.7.7',
    'SQLAlchemy',
    'tqdm',
    'uvicorn',
    # "Optional" dependencies
    'colorlog',
    'timing-asgi',
]
ingest = [
    'chroma',
    'filelock',
    'pypandoc',
]
testing = [
    'pytest',
    'pytest-asyncio',
]

[tool.setuptools]
packages = [
    'inference',
    'ingest',
]
