[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = 'brokegen'
version = '1.5'
license = {text = '0BSD'}

# Virtually all dependencies are optional, because of how disparate our build targets are.
# More specifically, pyinstaller gets a bit complex, so give each build target its own dependencies + venv.
dependencies = [
    'click',
    'jsondiff',
    'pyinstaller',
    'importlib-metadata; python_version>="3.11"',
]

[project.optional-dependencies]
inference = [
    'colorlog',
    'dspy-ai[chromadb]',
    'faiss-cpu',
    'fastapi',
    'httpx[http2]==0.27.0',
    'langchain',
    'langchain_experimental',
    # This is included in the top-level Makefile, because it needs to be _built_, like with _options_.
    # But also optional (Python code checks for ImportError), in case we can't build it.
    # 'llama-cpp-python',
    'orjson',
    'psutil',
    'simsimd',
    'SQLAlchemy',
    'tqdm',
    'uvicorn',
    # "Optional" dependencies
    'timing-asgi',
]
ingest = [
    'chroma',
    'filelock',
    'pypandoc',
]
testing = [
    'pytest',
    'pytest-asyncio',
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages]
find = {}
